home menu component background z-index fixed

--- a/src/app/shared/components/home-menu/home-menu.component.scss
+++ b/src/app/shared/components/home-menu/home-menu.component.scss
@@ -65,7 +65,7 @@
     
     @keyframes move {
       100% {
-        transform: translate3d(0, 0, 1px) rotate(360deg);
+        transform: translate3d(0, 0, -1px) rotate(360deg);
       }
     }
   
